# spindump

./: .gitignore  .travis.yml  CMakeLists.txt  Format.md  LICENSE.txt  Library.md  Makefile  News.md  README.md  Usage.md  spindump_analyze_aggregate.c  spindump_analyze_coap.c  spindump_analyze_dns.c  spindump_analyze_dns.h  spindump_analyze_icmp.c  spindump_analyze_icmp.h  spindump_analyze_quic.c  spindump_analyze_quic.h  spindump_analyze_quic_parser.h  spindump_analyze_tcp.c  spindump_analyze_udp.h  spindump_capture.h  spindump_connections.h  spindump_connections_new.c  spindump_connections_search.c  spindump_connections_structs.h  spindump_main.c  spindump_mid.c  spindump_mid.h  spindump_packet.h  spindump_protocols.c  spindump_remote.c  spindump_report.c  spindump_reversedns.c  spindump_reversedns.h  spindump_rtt.h  spindump_seq.c  spindump_seq.h  spindump_spin.h  spindump_spin_structs.h  (+6 more)
doc/: Docs.md
doc/api/: Api.md  analyzer.md  connection.md  json_parser.md  json_value.md
go/aggregator/: README.md  main.go
go/aggregator/internal/aggregate/: observer.go  session.go  types.go
go/aggregator/internal/format/: c3.go
go/aggregator/internal/iofmt/: c3.go  spindump.go
go/aggregator/internal/statistics/: utils.go
go/aggregator/server/: main.go
go/aggregator/visualizer/: dummy_json_server.js  index.html
src/: CMakeLists.txt  Makefile  spindump_analyze.c  spindump_analyze.h  spindump_analyze_aggregate.c  spindump_analyze_aggregate.h  spindump_analyze_coap.c  spindump_analyze_coap.h  spindump_analyze_dns.c  spindump_analyze_dns.h  spindump_analyze_event.c  spindump_analyze_icmp.c  spindump_analyze_icmp.h  spindump_analyze_ip.c  spindump_analyze_ip.h  spindump_analyze_quic.c  spindump_analyze_quic.h  spindump_analyze_quic_parser.c  spindump_analyze_quic_parser.h  spindump_analyze_quic_parser_util.c  spindump_analyze_quic_parser_util.h  spindump_analyze_quic_parser_versions.c  spindump_analyze_quic_parser_versions.h  spindump_analyze_sctp.c  spindump_analyze_sctp.h  spindump_analyze_sctp_parser.c  spindump_analyze_sctp_parser.h  spindump_analyze_tcp.c  spindump_analyze_tcp.h  spindump_analyze_tls_parser.c  spindump_analyze_tls_parser.h  spindump_analyze_udp.c  spindump_analyze_udp.h  spindump_bandwidth.c  spindump_bandwidth.h  spindump_capture.c  spindump_capture.h  spindump_checksource.sh  spindump_connections.c  spindump_connections.h  (+113 more)
test/: facebook.nets  google.nets  trace_cmd_aggregate_default.expected  trace_cmd_aggregate_default.options  trace_cmd_aggregate_default.txt  trace_cmd_aggregate_multinet.expected  trace_cmd_aggregate_multinet.options  trace_cmd_aggregate_multinet.pcap  trace_cmd_aggregate_multinet.txt  trace_cmd_aggregate_regular.expected  trace_cmd_aggregate_regular.options  trace_cmd_aggregate_regular.pcap  trace_cmd_aggregate_regular.txt  trace_cmd_jsonfile_empty.options  trace_cmd_jsonfile_empty.txt  trace_cmd_jsonfile_notexist.expected  trace_cmd_jsonfile_notexist.options  trace_cmd_jsonfile_notexist.txt  trace_cmd_jsonfile_simple.expected  trace_cmd_jsonfile_simple.json  trace_cmd_jsonfile_simple.options  trace_cmd_jsonfile_simple.txt  trace_cmd_jsonfile_syntaxerror.expected  trace_cmd_jsonfile_syntaxerror.options  trace_cmd_jsonfile_syntaxerror.txt  trace_cmd_tags_aggregate.expected  trace_cmd_tags_aggregate.options  trace_cmd_tags_aggregate.txt  trace_cmd_tags_default.expected  trace_cmd_tags_default.options  trace_cmd_tags_default.pcap  trace_cmd_tags_default.txt  trace_dns.expected  trace_dns.pcap  trace_dns.txt  trace_dns_simple.expected  trace_dns_simple.options  trace_dns_simple.pcap  trace_dns_simple.txt  trace_empty.txt  (+346 more)
test/sctp_ft/: sctptest.c  server
